--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "vite": "^5.0.0"
   },
   "dependencies": {
+    "@nivo/pie": "^0.85.0",
+    "firebase": "^11.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.0.0"
